# TAVSE

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
configs/: audio_only.yaml  audio_rgb.yaml  audio_rgb_thermal.yaml  audio_thermal.yaml
docs/: SETUP.md  TRAINING.md
scripts/: 00_download_data.sh  01_ingest_dataset.sh  02_prepare_noise.sh  02a_download_noise.sh  02b_prepare_noise.sh  03_train.sh  04_evaluate.sh
src/: __init__.py
src/models/: audio_encoder.py  fusion.py  tavse_model.py  visual_encoder.py
src/training/: evaluate.py  losses.py  train.py
src/utils/: config.py  metrics.py
